[package]
name = "Meusik"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
crossterm = "0.29.0"
dialoguer = "0.11.0"
home = "0.5.11"
indicatif = "0.17.11"
mp3-duration = "0.1.10"
rand = "0.9.1"
rodio = "0.20.1"
symphonia =  { version = "0.5.4", features = ["all"]}
termion = "4.0.5"
